# jobLens-data

./: .gitignore  LICENSE  README.md  install.sh  jobLens.py  pyproject.toml  setup.py  sync_results.py
.github/workflows/: job_scan_daily.yml.example
configs/core/: providers_settings.json  user_default.json.example
configs/data/: default_it_skills.json
configs/my_profile/: my_profile.json.example
configs/search_profiles/: aggressive_search.json  debug_ferchau.json  debug_freelance_de.json  debug_freelancermap.json  debug_gulp.json  debug_hays.json  debug_linkedin.json  debug_solcom.json  debug_xing.json  freelance_projects.json  local_bratislava.json  quality_focused.json  remote_ai_only.json
docs/: how_to.md  project_architecture.md  project_structure.md
helper/: filter_jobs_for_city.py  filter_jobs_for_test.py
outputs/20260206_1724_default_linkedin/: all_jobs_raw.csv  all_jobs_raw.json  job_search_results.csv  job_search_results.json  job_search_results.md
outputs/20260206_1727_default_hays/: job_search_results.csv  job_search_results.json  job_search_results.md
outputs/20260206_1746_default_freelancermap/: all_jobs_raw.csv  all_jobs_raw.json  job_search_results.csv  job_search_results.json  job_search_results.md
outputs/20260206_1754_default_gulp/: all_jobs_raw.csv  all_jobs_raw.json  job_search_results.csv  job_search_results.json  job_search_results.md
outputs/20260206_1802_default_xing/: all_jobs_raw.csv  all_jobs_raw.json  job_search_results.csv  job_search_results.json  job_search_results.md
outputs/20260206_1812_default_freelance_de/: all_jobs_raw.csv  all_jobs_raw.json  job_search_results.csv  job_search_results.json  job_search_results.md
outputs/20260207_1023_default_linkedin/: all_jobs_raw.csv  all_jobs_raw.json  job_search_results.csv  job_search_results.json  job_search_results.md
outputs/20260207_1025_default_hays/: all_jobs_raw.csv  all_jobs_raw.json  job_search_results.md
outputs/20260207_1045_default_freelancermap/: all_jobs_raw.csv  all_jobs_raw.json  job_search_results.csv  job_search_results.json  job_search_results.md
outputs/20260207_1053_default_gulp/: all_jobs_raw.csv  all_jobs_raw.json  job_search_results.csv  job_search_results.json  job_search_results.md
outputs/20260207_1100_default_xing/: all_jobs_raw.csv  job_search_results.json  job_search_results.md
outputs/20260207_1111_default_freelance_de/: all_jobs_raw.csv  all_jobs_raw.json  job_search_results.csv  job_search_results.json  job_search_results.md
outputs/20260207_1612_default_linkedin/: all_jobs_raw.json  job_search_results.csv  job_search_results.md
outputs/20260207_1616_default_hays/: job_search_results.csv  job_search_results.json  job_search_results.md
outputs/20260207_1619_default_solcom/: all_jobs_raw.csv  job_search_results.json
outputs/20260207_1628_default_freelancermap/: all_jobs_raw.json  job_search_results.csv  job_search_results.md
outputs/20260207_1638_default_gulp/: all_jobs_raw.csv  job_search_results.json  job_search_results.md
outputs/20260207_1641_default_xing/: all_jobs_raw.json  job_search_results.csv  job_search_results.md
outputs/20260207_1947_default_linkedin/: all_jobs_raw.json  job_search_results.csv  job_search_results.md
outputs/20260207_1951_default_hays/: job_search_results.csv  job_search_results.json  job_search_results.md
results/: JobLens_Dashboard.xlsx  all_found_jobs.csv
src/cli/: batch.py
(+216 files in other folders)
